refactor: update AI extraction references and improve localization strings

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -17,11 +17,14 @@
   "advanced-interpretation-description": "Intelligente Inhaltsergänzung und Quellerkennung",
   "advisor": "Betreuer",
   "ai": "KI",
+  "ai-auto-verification-text": "Sobald die KI Ihre Referenzen extrahiert hat, startet die Verifikation automatisch. Anschließend können Sie Treffer filtern und Ergebnisse nachbessern.",
+  "ai-auto-verification-title": "KI-extrahierte Referenzen werden automatisch verifiziert",
   "ai-configuration": "AI Konfiguration",
   "ai-description": "Aktiviere und konfiguriere KI-gestützte Funktionen",
   "ai-disclaimer-detailed": "KI-extrahierte Referenzen können Fehler enthalten und zwischen Extraktionen variieren, was die Matching-Ergebnisse beeinflussen kann. Bitte prüfen Sie die Genauigkeit, bevor Sie sie in wissenschaftlichen Arbeiten verwenden.",
+  "ai-extract-references": "KI-Referenzen extrahieren",
   "ai-extraction": "KI-Extraktion",
-  "ai-extraction-mode-description": "Freitext-Eingabe und unstrukturierte Eingabe ist möglich, da die KI Referenzen automatisch aus jedem Textformat erkennen und extrahieren kann. Die Extraktionsdauer hängt von der Textlänge und dem gewählten KI-Modell/Anbieter ab.",
+  "ai-extraction-mode-description": "Freitext-Eingabe und unstrukturierte Eingabe ist möglich, da die KI Referenzen automatisch aus jedem Textformat erkennen und extrahieren kann. Die Extraktionsdauer hängt von der Textlänge und dem gewählten KI-Modell/Anbieter ab (API-Schlüssel erforderlich).",
   "ai-extraction-mode-title": "KI-Extraktions-Modus",
   "ai-model": "KI-Modell",
   "ai-model-description": "Wählen Sie das KI-Modell, das für die Extraktion verwendet werden soll.",
@@ -199,6 +202,7 @@
   "display-mode": "Anzeigemodus",
   "display-mode-description": "Wählen Sie den Anzeigemodus der Erweiterung",
   "division": "Abteilung",
+  "documentation": "Dokumentation",
   "doi": "DOI",
   "doi-copied": "Kopiert",
   "doi-incorrect": "Der DOI ist in Ihrer Quelle falsch",
@@ -539,6 +543,8 @@
   "location": "Ort",
   "locator": "Locator",
   "low-impact": "Geringer Einfluss auf Bewertung",
+  "manual-verification-text": "Fügen Sie Ihre Referenzen ein und klicken Sie auf „Parsen“. Danach können Sie sie hier verifizieren.",
+  "manual-verification-title": "Referenzen hinzufügen, um die Verifikation zu starten",
   "match-analysis": "Übereinstimmungsanalyse",
   "match-details": "Übereinstimmungsdetails",
   "match-quality-settings-description": "Konfigurieren Sie, wie Übereinstimmungswerte visuell mit Farben und Indikatoren dargestellt werden",
@@ -643,8 +649,6 @@
   "no-match-threshold": "Keine Übereinstimmung",
   "no-match-threshold-description": "Referenzen unter der möglichen Übereinstimmungs-Schwelle",
   "no-match-tooltip": "Keine Übereinstimmungen gefunden (<{possibleThreshold}%)",
-  "unverified-chip": "Nicht verifiziert",
-  "unverified-tooltip": "{count} Referenzen nicht verifiziert (z. B. abgebrochen, ausstehend oder Fehler)",
   "no-matching-source-found": "Keine passende Quelle gefunden oder Überprüfung fehlgeschlagen",
   "no-references-detected": "Keine Referenzen erkannt",
   "no-references-found": "Keine Referenzen gefunden",
@@ -838,6 +842,26 @@
   "setting-interpret-incomplete-info": "Unvollständige Informationen interpretieren",
   "setting-interpret-incomplete-info-description": "Abgekürzte Informationen erweitern",
   "setting-interpret-incomplete-info-example": "\"et al.\" → vollständige Autorenliste wenn verfügbar",
+  "setting-match-author-initials": "Autor:innen über Initialen abgleichen",
+  "setting-match-author-initials-description": "Vergleicht Namen anhand identischer Nachnamen und überlappender Initialen, auch wenn ausgeschriebene Vornamen variieren.",
+  "setting-match-author-initials-example": "\"Müller, A. B.\" entspricht \"Muller, Anna\"",
+  "setting-match-author-initials-short-description": "Nachname + Initialen nutzen",
+  "setting-match-container-title-variants": "Variantentitel für Container",
+  "setting-match-container-title-variants-description": "Ignoriert Klammern mit reinen Akronymen oder nachgestellte Abkürzungen beim Vergleich von Zeitschriften- oder Buchtiteln.",
+  "setting-match-container-title-variants-example": "\"Journal of Testing (JOT)\" entspricht \"Journal of Testing\"",
+  "setting-match-container-title-variants-short-description": "Acronym-Zusätze ignorieren",
+  "setting-match-page-range-overlap": "Seitenbereichs-Überlappung",
+  "setting-match-page-range-overlap-description": "Behandelt sich überschneidende Bereiche und einzelne Seiten innerhalb eines Bereichs als Treffer und vergleicht Bereiche anhand ihrer Schnittmenge.",
+  "setting-match-page-range-overlap-example": "\"123-125\" entspricht \"124\"",
+  "setting-match-page-range-overlap-short-description": "Überlappende Seiten erlauben",
+  "setting-match-structured-dates": "Strukturierte Datumsabgleiche",
+  "setting-match-structured-dates-description": "Vergleicht normalisierte Jahres-, Monats- und Tagesangaben und erlaubt eine Toleranz von ±1 Jahr bei kleineren Abweichungen.",
+  "setting-match-structured-dates-example": "\"2020-03-15\" entspricht \"März 2020\"",
+  "setting-match-structured-dates-short-description": "Datumskomponenten abgleichen",
+  "setting-match-volume-issue-numeric": "Band-/Heftnummern erkennen",
+  "setting-match-volume-issue-numeric-description": "Extrahiert Zahlen aus Angaben wie \"Vol. 12 (Issue 3)\", damit kombinierte Felder isolierte Nummern abgleichen.",
+  "setting-match-volume-issue-numeric-example": "\"Vol. 12 (3)\" entspricht Band \"12\"",
+  "setting-match-volume-issue-numeric-short-description": "Eingebettete Zahlen erkennen",
   "setting-normalize-abbreviations": "Abkürzungen normalisieren",
   "setting-normalize-abbreviations-description": "Häufige Abkürzungen erweitern",
   "setting-normalize-abbreviations-example": "\"J.\" → \"Journal\", \"Vol.\" → \"Volume\"",
@@ -886,26 +910,6 @@
   "setting-normalize-urls-description": "URLs für konsistenten Vergleich normalisieren durch Entfernen von Fragmenten, Standardisierung von Parametern und Bereinigung von Tracking-Daten",
   "setting-normalize-urls-example": "\"https://example.com/page?utm_campaign=123#section\" → \"https://example.com/page\"",
   "setting-normalize-urls-short-description": "URL-Format standardisieren",
-  "setting-match-structured-dates": "Strukturierte Datumsabgleiche",
-  "setting-match-structured-dates-description": "Vergleicht normalisierte Jahres-, Monats- und Tagesangaben und erlaubt eine Toleranz von ±1 Jahr bei kleineren Abweichungen.",
-  "setting-match-structured-dates-example": "\"2020-03-15\" entspricht \"März 2020\"",
-  "setting-match-structured-dates-short-description": "Datumskomponenten abgleichen",
-  "setting-match-author-initials": "Autor:innen über Initialen abgleichen",
-  "setting-match-author-initials-description": "Vergleicht Namen anhand identischer Nachnamen und überlappender Initialen, auch wenn ausgeschriebene Vornamen variieren.",
-  "setting-match-author-initials-example": "\"Müller, A. B.\" entspricht \"Muller, Anna\"",
-  "setting-match-author-initials-short-description": "Nachname + Initialen nutzen",
-  "setting-match-volume-issue-numeric": "Band-/Heftnummern erkennen",
-  "setting-match-volume-issue-numeric-description": "Extrahiert Zahlen aus Angaben wie \"Vol. 12 (Issue 3)\", damit kombinierte Felder isolierte Nummern abgleichen.",
-  "setting-match-volume-issue-numeric-example": "\"Vol. 12 (3)\" entspricht Band \"12\"",
-  "setting-match-volume-issue-numeric-short-description": "Eingebettete Zahlen erkennen",
-  "setting-match-page-range-overlap": "Seitenbereichs-Überlappung",
-  "setting-match-page-range-overlap-description": "Behandelt sich überschneidende Bereiche und einzelne Seiten innerhalb eines Bereichs als Treffer und vergleicht Bereiche anhand ihrer Schnittmenge.",
-  "setting-match-page-range-overlap-example": "\"123-125\" entspricht \"124\"",
-  "setting-match-page-range-overlap-short-description": "Überlappende Seiten erlauben",
-  "setting-match-container-title-variants": "Variantentitel für Container",
-  "setting-match-container-title-variants-description": "Ignoriert Klammern mit reinen Akronymen oder nachgestellte Abkürzungen beim Vergleich von Zeitschriften- oder Buchtiteln.",
-  "setting-match-container-title-variants-example": "\"Journal of Testing (JOT)\" entspricht \"Journal of Testing\"",
-  "setting-match-container-title-variants-short-description": "Acronym-Zusätze ignorieren",
   "setting-normalize-whitespace": "Leerzeichen normalisieren",
   "setting-normalize-whitespace-description": "Leerzeichen normalisieren durch Entfernen doppelter Leerzeichen, führender/nachfolgender Leerzeichen, unnötiger Tabs und weicher Zeilenumbrüche",
   "setting-normalize-whitespace-example": "\"Das    ist ein  Test.\" → \"Das ist ein Test.\"",
@@ -949,6 +953,51 @@
   "source-fields": "Quellenfelder",
   "source-metadata": "Quellen-Metadaten",
   "source-type": "Quellentyp",
+  "source-type-article": "Artikel",
+  "source-type-article-journal": "Zeitschriftenartikel",
+  "source-type-article-magazine": "Magazinartikel",
+  "source-type-article-newspaper": "Zeitungsartikel",
+  "source-type-bill": "Gesetzesentwurf",
+  "source-type-book": "Buch",
+  "source-type-broadcast": "Sendung",
+  "source-type-chapter": "Buchkapitel",
+  "source-type-classic": "Klassisches Werk",
+  "source-type-collection": "Sammlung",
+  "source-type-dataset": "Datensatz",
+  "source-type-document": "Dokument",
+  "source-type-entry": "Eintrag",
+  "source-type-entry-dictionary": "Wörterbucheintrag",
+  "source-type-entry-encyclopedia": "Enzyklopädieeintrag",
+  "source-type-event": "Veranstaltung",
+  "source-type-figure": "Abbildung",
+  "source-type-graphic": "Grafik",
+  "source-type-hearing": "Anhörung",
+  "source-type-interview": "Interview",
+  "source-type-legal_case": "Gerichtsfall",
+  "source-type-legislation": "Gesetzgebung",
+  "source-type-manuscript": "Manuskript",
+  "source-type-map": "Karte",
+  "source-type-motion_picture": "Film",
+  "source-type-musical_score": "Partitur",
+  "source-type-pamphlet": "Broschüre",
+  "source-type-paper-conference": "Konferenzbeitrag",
+  "source-type-patent": "Patent",
+  "source-type-performance": "Aufführung",
+  "source-type-periodical": "Periodikum",
+  "source-type-personal_communication": "Persönliche Kommunikation",
+  "source-type-post": "Beitrag",
+  "source-type-post-weblog": "Blogbeitrag",
+  "source-type-regulation": "Verordnung",
+  "source-type-report": "Bericht",
+  "source-type-review": "Rezension",
+  "source-type-review-book": "Buchrezension",
+  "source-type-software": "Software",
+  "source-type-song": "Lied",
+  "source-type-speech": "Rede",
+  "source-type-standard": "Norm",
+  "source-type-thesis": "Dissertation",
+  "source-type-treaty": "Vertrag",
+  "source-type-webpage": "Webseite",
   "source-url": "Quellen-URL",
   "sources-found": "Quellen gefunden",
   "status": "Status",
@@ -983,9 +1032,9 @@
   "title-short": "Titel (Kurz)",
   "token-editor-help-description": "Der Parser segmentiert Ihre Referenzen automatisch (Autor, Titel, etc.) mithilfe von maschinellem Lernen. Überprüfen Sie jedes Segment sorgfältig und korrigieren Sie Fehler, indem Sie auf Tokens klicken und das richtige Label aus der Dropdown-Liste auswählen. Kombinieren Sie verwandte Tokens - zum Beispiel gehört 'in' meist zu Editor oder Zeitschriftennamen. Für beste Ergebnisse muss jeder Token ein Label haben.",
   "token-editor-help-title": "So verwenden Sie den Token-Editor",
-  "token-editor-select-new-label": "Neues Label auswählen",
-  "token-editor-search-labels-placeholder": "Tippe, um Labels zu durchsuchen...",
   "token-editor-multi-selection-count": "{count} Tokens ausgewählt",
+  "token-editor-search-labels-placeholder": "Tippe, um Labels zu durchsuchen...",
+  "token-editor-select-new-label": "Neues Label auswählen",
   "token-label-author": "Autor",
   "token-label-citation-number": "Zitiernummer",
   "token-label-collection-title": "Sammlungstitel",
@@ -1089,51 +1138,6 @@
   "tooltip-series": "Name der Publikationsreihe (z.B. 'Lecture Notes in Computer Science', 'Studies in Linguistics')",
   "tooltip-series-number": "Nummer innerhalb einer Publikationsreihe (z.B. '1234', 'Vol. 15')",
   "tooltip-seriesNumber": "Seriennummer innerhalb einer Serie",
-  "source-type-article": "Artikel",
-  "source-type-article-journal": "Zeitschriftenartikel",
-  "source-type-article-magazine": "Magazinartikel",
-  "source-type-article-newspaper": "Zeitungsartikel",
-  "source-type-bill": "Gesetzesentwurf",
-  "source-type-book": "Buch",
-  "source-type-broadcast": "Sendung",
-  "source-type-chapter": "Buchkapitel",
-  "source-type-classic": "Klassisches Werk",
-  "source-type-collection": "Sammlung",
-  "source-type-dataset": "Datensatz",
-  "source-type-document": "Dokument",
-  "source-type-entry": "Eintrag",
-  "source-type-entry-dictionary": "Wörterbucheintrag",
-  "source-type-entry-encyclopedia": "Enzyklopädieeintrag",
-  "source-type-event": "Veranstaltung",
-  "source-type-figure": "Abbildung",
-  "source-type-graphic": "Grafik",
-  "source-type-hearing": "Anhörung",
-  "source-type-interview": "Interview",
-  "source-type-legal_case": "Gerichtsfall",
-  "source-type-legislation": "Gesetzgebung",
-  "source-type-manuscript": "Manuskript",
-  "source-type-map": "Karte",
-  "source-type-motion_picture": "Film",
-  "source-type-musical_score": "Partitur",
-  "source-type-pamphlet": "Broschüre",
-  "source-type-paper-conference": "Konferenzbeitrag",
-  "source-type-patent": "Patent",
-  "source-type-performance": "Aufführung",
-  "source-type-periodical": "Periodikum",
-  "source-type-personal_communication": "Persönliche Kommunikation",
-  "source-type-post": "Beitrag",
-  "source-type-post-weblog": "Blogbeitrag",
-  "source-type-regulation": "Verordnung",
-  "source-type-report": "Bericht",
-  "source-type-review": "Rezension",
-  "source-type-review-book": "Buchrezension",
-  "source-type-software": "Software",
-  "source-type-song": "Lied",
-  "source-type-speech": "Rede",
-  "source-type-standard": "Norm",
-  "source-type-thesis": "Dissertation",
-  "source-type-treaty": "Vertrag",
-  "source-type-webpage": "Webseite",
   "tooltip-sourceType": "Art der Quelle (z.B. 'journal-article', 'book', 'thesis', 'conference-paper')",
   "tooltip-subjects": "Akademische Fachbereiche oder Disziplinen (z.B. 'Computer Science', 'Medicine')",
   "tooltip-submitted": "Datum, an dem das Manuskript eingereicht wurde (z.B. '2024-01-15')",
@@ -1173,8 +1177,10 @@
   "type": "Typ",
   "unregistered": "Nicht registriert",
   "unverified": "Nicht verifiziert",
+  "unverified-chip": "Nicht verifiziert",
   "unverified-reference": "Referenz konnte keiner Quelle zugeordnet werden. Bitte überprüfen Sie die Referenz manuell.",
   "unverified-references-tooltip": "Referenzen, die keiner Quelle zugeordnet werden konnten",
+  "unverified-tooltip": "{count} Referenzen nicht verifiziert (z. B. abgebrochen, ausstehend oder Fehler)",
   "upload-pdf": "PDF-Datei importieren",
   "url": "URL",
   "url-match": "URL-Übereinstimmung",
@@ -1186,8 +1192,8 @@
   "verification-details": "Verifikationsdetails",
   "verification-failed": "Verifizierung fehlgeschlagen",
   "verification-help-description": "Source Taster durchsucht Ihre Referenzen in mehreren wissenschaftlichen Datenbanken (Crossref, Semantic Scholar, etc.), um passende Publikationen zu finden. Dann vergleicht es Metadaten wie Titel, Autoren und Publikationsdetails mit dem Damerau-Levenshtein-Algorithmus, um Match-Scores zu berechnen und Ergebnisse als exakte, starke, mögliche oder keine Übereinstimmung zu kategorisieren.",
-  "verification-help-title": "Wie die Verifikation funktioniert",
   "verification-help-note-common-fields": "Es werden nur Felder verglichen und bewertet, die sowohl in der extrahierten Referenz als auch im Datensatz der Datenbank vorhanden sind.",
+  "verification-help-title": "Wie die Verifikation funktioniert",
   "verification-in-progress": "Eine andere Überprüfung läuft bereits",
   "verification-successful": "Verifizierung erfolgreich",
   "verification-with-errors": "{verified}/{total} verifiziert ({errors} Fehler)",
@@ -1202,14 +1208,9 @@
   "verify-references": "Referenzen verifizieren",
   "verify-references-by-searching-and-matching-them-to-entries-in-scholarly-databases": "Verifizieren Sie Referenzen, indem Sie sie in wissenschaftlichen Datenbanken suchen und abgleichen",
   "verifying": "Verifiziert",
-  "ai-auto-verification-title": "KI-extrahierte Referenzen werden automatisch verifiziert",
-  "ai-auto-verification-text": "Sobald die KI Ihre Referenzen extrahiert hat, startet die Verifikation automatisch. Anschließend können Sie Treffer filtern und Ergebnisse nachbessern.",
-  "manual-verification-title": "Referenzen hinzufügen, um die Verifikation zu starten",
-  "manual-verification-text": "Fügen Sie Ihre Referenzen ein und klicken Sie auf „Parsen“. Danach können Sie sie hier verifizieren.",
   "verifying-reference-current": "Überprüfe: {reference}",
   "verifying-references-progress": "Überprüfe Referenzen ({current}/{total})",
   "version": "Version",
-  "documentation": "Dokumentation",
   "view-docs": "Dokumentation öffnen",
   "visit-website": "Webseite besuchen",
   "volume": "Band",
