--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -17,11 +17,14 @@
   "advanced-interpretation-description": "Intelligent content completion and source recognition",
   "advisor": "Advisor",
   "ai": "AI",
+  "ai-auto-verification-text": "Once the AI extracts your references, verification runs automatically. You can then filter matches and adjust results.",
+  "ai-auto-verification-title": "AI-extracted references are verified automatically",
   "ai-configuration": "AI Configuration",
   "ai-description": "Enable and configure AI-powered functionality",
   "ai-disclaimer-detailed": "AI-extracted references may contain errors and vary between extractions, which can affect matching scores. Please verify their accuracy before using them in academic work.",
+  "ai-extract-references": "AI Extract References",
   "ai-extraction": "AI Extraction",
-  "ai-extraction-mode-description": "Free text input and unstructured input is possible as the AI can recognize and extract references automatically from any text format. Extraction time depends on text length and selected AI model/provider.",
+  "ai-extraction-mode-description": "Free text input and unstructured input is possible as the AI can recognize and extract references automatically from any text format. Extraction time depends on text length and selected AI model/provider (API-Key required).",
   "ai-extraction-mode-title": "AI Extraction Mode",
   "ai-model": "AI Model",
   "ai-model-description": "Select the AI model to be used for the extraction.",
@@ -199,6 +202,7 @@
   "display-mode": "Display Mode",
   "display-mode-description": "Select the display mode of the extension",
   "division": "Division",
+  "documentation": "Documentation",
   "doi": "DOI",
   "doi-copied": "Copied",
   "doi-incorrect": "The DOI is incorrect in your source",
@@ -539,6 +543,8 @@
   "location": "Location",
   "locator": "Locator",
   "low-impact": "Minor influence on match score",
+  "manual-verification-text": "Paste your references and click 'Parse'. Then verify them here.",
+  "manual-verification-title": "Add references to start verification",
   "match-analysis": "",
   "match-details": "Match Details",
   "match-quality-settings-description": "Configure how match scores are visually represented with colors and indicators",
@@ -643,8 +649,6 @@
   "no-match-threshold": "No Match",
   "no-match-threshold-description": "References below the possible match threshold",
   "no-match-tooltip": "No matches found (<{possibleThreshold}%)",
-  "unverified-chip": "Unverified",
-  "unverified-tooltip": "{count} references unverified (cancelled, pending, or failed)",
   "no-matching-source-found": " No matching source found or verification failed",
   "no-references-detected": "No references detected",
   "no-references-found": "No references found",
@@ -838,6 +842,26 @@
   "setting-interpret-incomplete-info": "Interpret Incomplete Info",
   "setting-interpret-incomplete-info-description": "Expand abbreviated information",
   "setting-interpret-incomplete-info-example": "\"et al.\" → full author list if available",
+  "setting-match-author-initials": "Author initials matching",
+  "setting-match-author-initials-description": "Match creators when family names agree and initials overlap, even if full given names differ.",
+  "setting-match-author-initials-example": "\"Müller, A. B.\" matches \"Muller, Anna\"",
+  "setting-match-author-initials-short-description": "Use family + initials",
+  "setting-match-container-title-variants": "Container title variants",
+  "setting-match-container-title-variants-description": "Ignore acronym-only parentheses or trailing abbreviations when comparing journal or book titles.",
+  "setting-match-container-title-variants-example": "\"Journal of Testing (JOT)\" matches \"Journal of Testing\"",
+  "setting-match-container-title-variants-short-description": "Ignore acronym add-ons",
+  "setting-match-page-range-overlap": "Page range overlap",
+  "setting-match-page-range-overlap-description": "Treat overlapping ranges and single pages inside a range as matches and compare ranges by their intersection.",
+  "setting-match-page-range-overlap-example": "\"123-125\" matches \"124\"",
+  "setting-match-page-range-overlap-short-description": "Allow overlapping pages",
+  "setting-match-structured-dates": "Structured date comparison",
+  "setting-match-structured-dates-description": "Compare normalized year, month, and day components and allow a ±1 year tolerance for minor discrepancies.",
+  "setting-match-structured-dates-example": "\"2020-03-15\" matches \"March 2020\"",
+  "setting-match-structured-dates-short-description": "Match date components",
+  "setting-match-volume-issue-numeric": "Volume/issue number extraction",
+  "setting-match-volume-issue-numeric-description": "Detect numeric tokens inside labels like \"Vol. 12 (Issue 3)\" so combined fields still match isolated numbers.",
+  "setting-match-volume-issue-numeric-example": "\"Vol. 12 (3)\" matches volume \"12\"",
+  "setting-match-volume-issue-numeric-short-description": "Detect embedded numbers",
   "setting-normalize-abbreviations": "Normalize Abbreviations",
   "setting-normalize-abbreviations-description": "Expand common abbreviations",
   "setting-normalize-abbreviations-example": "\"J.\" → \"Journal\", \"Vol.\" → \"Volume\"",
@@ -886,26 +910,6 @@
   "setting-normalize-urls-description": "Normalize URLs for consistent comparison by removing fragments, standardizing parameters, and cleaning tracking data",
   "setting-normalize-urls-example": "\"https://example.com/page?utm_campaign=123#section\" → \"https://example.com/page\"",
   "setting-normalize-urls-short-description": "Standardize URL format",
-  "setting-match-structured-dates": "Structured date comparison",
-  "setting-match-structured-dates-description": "Compare normalized year, month, and day components and allow a ±1 year tolerance for minor discrepancies.",
-  "setting-match-structured-dates-example": "\"2020-03-15\" matches \"March 2020\"",
-  "setting-match-structured-dates-short-description": "Match date components",
-  "setting-match-author-initials": "Author initials matching",
-  "setting-match-author-initials-description": "Match creators when family names agree and initials overlap, even if full given names differ.",
-  "setting-match-author-initials-example": "\"Müller, A. B.\" matches \"Muller, Anna\"",
-  "setting-match-author-initials-short-description": "Use family + initials",
-  "setting-match-volume-issue-numeric": "Volume/issue number extraction",
-  "setting-match-volume-issue-numeric-description": "Detect numeric tokens inside labels like \"Vol. 12 (Issue 3)\" so combined fields still match isolated numbers.",
-  "setting-match-volume-issue-numeric-example": "\"Vol. 12 (3)\" matches volume \"12\"",
-  "setting-match-volume-issue-numeric-short-description": "Detect embedded numbers",
-  "setting-match-page-range-overlap": "Page range overlap",
-  "setting-match-page-range-overlap-description": "Treat overlapping ranges and single pages inside a range as matches and compare ranges by their intersection.",
-  "setting-match-page-range-overlap-example": "\"123-125\" matches \"124\"",
-  "setting-match-page-range-overlap-short-description": "Allow overlapping pages",
-  "setting-match-container-title-variants": "Container title variants",
-  "setting-match-container-title-variants-description": "Ignore acronym-only parentheses or trailing abbreviations when comparing journal or book titles.",
-  "setting-match-container-title-variants-example": "\"Journal of Testing (JOT)\" matches \"Journal of Testing\"",
-  "setting-match-container-title-variants-short-description": "Ignore acronym add-ons",
   "setting-normalize-whitespace": "Normalize Whitespace",
   "setting-normalize-whitespace-description": "Normalize whitespace by removing duplicated spaces, leading/trailing spaces, unnecessary tabs, and soft line breaks",
   "setting-normalize-whitespace-example": "\"This    is a  test.\" → \"This is a test.\"",
@@ -949,6 +953,51 @@
   "source-fields": "Source Fields",
   "source-metadata": "Source Metadata",
   "source-type": "Source Type",
+  "source-type-article": "Article",
+  "source-type-article-journal": "Journal Article",
+  "source-type-article-magazine": "Magazine Article",
+  "source-type-article-newspaper": "Newspaper Article",
+  "source-type-bill": "Bill",
+  "source-type-book": "Book",
+  "source-type-broadcast": "Broadcast",
+  "source-type-chapter": "Book Chapter",
+  "source-type-classic": "Classic Work",
+  "source-type-collection": "Collection",
+  "source-type-dataset": "Dataset",
+  "source-type-document": "Document",
+  "source-type-entry": "Entry",
+  "source-type-entry-dictionary": "Dictionary Entry",
+  "source-type-entry-encyclopedia": "Encyclopedia Entry",
+  "source-type-event": "Event",
+  "source-type-figure": "Figure",
+  "source-type-graphic": "Graphic",
+  "source-type-hearing": "Hearing",
+  "source-type-interview": "Interview",
+  "source-type-legal_case": "Legal Case",
+  "source-type-legislation": "Legislation",
+  "source-type-manuscript": "Manuscript",
+  "source-type-map": "Map",
+  "source-type-motion_picture": "Motion Picture",
+  "source-type-musical_score": "Musical Score",
+  "source-type-pamphlet": "Pamphlet",
+  "source-type-paper-conference": "Conference Paper",
+  "source-type-patent": "Patent",
+  "source-type-performance": "Performance",
+  "source-type-periodical": "Periodical",
+  "source-type-personal_communication": "Personal Communication",
+  "source-type-post": "Post",
+  "source-type-post-weblog": "Blog Post",
+  "source-type-regulation": "Regulation",
+  "source-type-report": "Report",
+  "source-type-review": "Review",
+  "source-type-review-book": "Book Review",
+  "source-type-software": "Software",
+  "source-type-song": "Song",
+  "source-type-speech": "Speech",
+  "source-type-standard": "Standard",
+  "source-type-thesis": "Thesis",
+  "source-type-treaty": "Treaty",
+  "source-type-webpage": "Webpage",
   "source-url": "Source URL",
   "sources-found": "",
   "status": "Status",
@@ -983,9 +1032,9 @@
   "title-short": "Title (Short)",
   "token-editor-help-description": "The parser automatically segments your references (author, title, etc.) using machine learning. Review each segment carefully and correct any errors by clicking on tokens and selecting the correct label from the dropdown. Combine related tokens together - for example, 'in' typically belongs with editor or journal names. Every token must have a label for best results.",
   "token-editor-help-title": "How to Use the Token Editor",
-  "token-editor-select-new-label": "Select new label",
-  "token-editor-search-labels-placeholder": "Type to search labels...",
   "token-editor-multi-selection-count": "{count} tokens selected",
+  "token-editor-search-labels-placeholder": "Type to search labels...",
+  "token-editor-select-new-label": "Select new label",
   "token-label-author": "Author",
   "token-label-citation-number": "Citation Number",
   "token-label-collection-title": "Collection Title",
@@ -1089,51 +1138,6 @@
   "tooltip-series": "Publication series name (e.g. 'Lecture Notes in Computer Science', 'Studies in Linguistics')",
   "tooltip-series-number": "Number within a publication series (e.g. '1234', 'Vol. 15')",
   "tooltip-seriesNumber": "Series number within a series",
-  "source-type-article": "Article",
-  "source-type-article-journal": "Journal Article",
-  "source-type-article-magazine": "Magazine Article",
-  "source-type-article-newspaper": "Newspaper Article",
-  "source-type-bill": "Bill",
-  "source-type-book": "Book",
-  "source-type-broadcast": "Broadcast",
-  "source-type-chapter": "Book Chapter",
-  "source-type-classic": "Classic Work",
-  "source-type-collection": "Collection",
-  "source-type-dataset": "Dataset",
-  "source-type-document": "Document",
-  "source-type-entry": "Entry",
-  "source-type-entry-dictionary": "Dictionary Entry",
-  "source-type-entry-encyclopedia": "Encyclopedia Entry",
-  "source-type-event": "Event",
-  "source-type-figure": "Figure",
-  "source-type-graphic": "Graphic",
-  "source-type-hearing": "Hearing",
-  "source-type-interview": "Interview",
-  "source-type-legal_case": "Legal Case",
-  "source-type-legislation": "Legislation",
-  "source-type-manuscript": "Manuscript",
-  "source-type-map": "Map",
-  "source-type-motion_picture": "Motion Picture",
-  "source-type-musical_score": "Musical Score",
-  "source-type-pamphlet": "Pamphlet",
-  "source-type-paper-conference": "Conference Paper",
-  "source-type-patent": "Patent",
-  "source-type-performance": "Performance",
-  "source-type-periodical": "Periodical",
-  "source-type-personal_communication": "Personal Communication",
-  "source-type-post": "Post",
-  "source-type-post-weblog": "Blog Post",
-  "source-type-regulation": "Regulation",
-  "source-type-report": "Report",
-  "source-type-review": "Review",
-  "source-type-review-book": "Book Review",
-  "source-type-software": "Software",
-  "source-type-song": "Song",
-  "source-type-speech": "Speech",
-  "source-type-standard": "Standard",
-  "source-type-thesis": "Thesis",
-  "source-type-treaty": "Treaty",
-  "source-type-webpage": "Webpage",
   "tooltip-sourceType": "Type of source (e.g. 'journal-article', 'book', 'thesis', 'conference-paper')",
   "tooltip-subjects": "Academic subjects or disciplines covered (e.g. 'Computer Science', 'Medicine')",
   "tooltip-submitted": "Date when the manuscript was submitted (e.g. '2024-01-15')",
@@ -1173,8 +1177,10 @@
   "type": "Type",
   "unregistered": "Unregistered",
   "unverified": "Unverified",
+  "unverified-chip": "Unverified",
   "unverified-reference": "Reference could not be matched to a source. Please verify the reference manually",
   "unverified-references-tooltip": "References that could not be matched to a source",
+  "unverified-tooltip": "{count} references unverified (cancelled, pending, or failed)",
   "upload-pdf": "Import PDF",
   "url": "URL",
   "url-match": "URL Match",
@@ -1186,8 +1192,8 @@
   "verification-details": "Verification Details",
   "verification-failed": "Verification failed",
   "verification-help-description": "Source Taster searches your references across multiple academic databases (Crossref, Semantic Scholar, etc.) to find matching publications. It then compares metadata like title, authors, and publication details using the Damerau-Levenshtein algorithm to calculate match scores and categorize results as exact, strong, possible, or no match.",
-  "verification-help-title": "How Verification Works",
   "verification-help-note-common-fields": "Only fields that exist in both the extracted reference and the database record are matched and scored.",
+  "verification-help-title": "How Verification Works",
   "verification-in-progress": "Another verification is in progress",
   "verification-successful": "Verification successful",
   "verification-with-errors": "{verified}/{total} verified ({errors} errors)",
@@ -1202,14 +1208,9 @@
   "verify-references": "Verify References",
   "verify-references-by-searching-and-matching-them-to-entries-in-scholarly-databases": "Verify references by searching and matching them to entries in scholarly databases.",
   "verifying": "Verifying",
-  "ai-auto-verification-title": "AI-extracted references are verified automatically",
-  "ai-auto-verification-text": "Once the AI extracts your references, verification runs automatically. You can then filter matches and adjust results.",
-  "manual-verification-title": "Add references to start verification",
-  "manual-verification-text": "Paste your references and click 'Parse'. Then verify them here.",
   "verifying-reference-current": "Verifying: {reference}",
   "verifying-references-progress": "Verifying references ({current}/{total})",
   "version": "Version",
-  "documentation": "Documentation",
   "view-docs": "Open the documentation",
   "visit-website": "Visit Website",
   "volume": "Volume",
